cabal-version: >= 1.10

name: testing
version: 2020

build-type: Simple

library
  build-depends: base
  default-language: Haskell2010
  exposed-modules: Square
  hs-source-dirs: lib

test-suite basic
  build-depends:
    -- global
    base, tasty, tasty-hunit,
    -- package
    testing
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: Test.hs
  type: exitcode-stdio-1.0
