cabal-version: >= 1.10

name: property-testing
version: 2020

build-type: Simple

library
  build-depends: base
  default-extensions: DeriveGeneric
  default-language: Haskell2010
  exposed-modules: Expr Square
  hs-source-dirs: lib

test-suite basic
  build-depends:
    -- global
    base, tasty, tasty-quickcheck,
    -- package
    property-testing
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: Test.hs
  type: exitcode-stdio-1.0
