cabal-version: 2.2

name: json
version: 2020

build-type: Simple

common language
  build-depends: base, text
  default-language: Haskell2010

library telegram
  import: language
  build-depends: aeson, lens, wreq
  exposed-modules: Telegram
  hs-source-dirs: telegram

library database
  import: language
  build-depends:
    monad-logger, persistent-sqlite, persistent-template, resourcet,
    transformers,
  exposed-modules: Database
  hs-source-dirs: database

executable bot
  import: language
  build-depends:
    -- global
    persistent, time,
    -- package
    database, telegram,
  hs-source-dirs: bot
  main-is: Main.hs
