cabal-version: 2.2

name: compiler-py
version: 2020

build-type: Simple

common language
  build-depends: base, text
  default-language: Haskell2010

executable compiler
  import: language
  build-depends: neat-interpolation
  default-extensions:
    LambdaCase NamedFieldPuns OverloadedStrings QuasiQuotes RecordWildCards
  main-is: Main.hs

executable filtersum
  import: language
  main-is: FilterSum.hs
