cabal-version: 2.2

name: compiler
version: 2020

build-type: Simple

common language
  build-depends: base
  default-language: Haskell2010

executable compiler
  import: language
  build-depends: language-c-quote, mainland-pretty, process
  default-extensions: LambdaCase NamedFieldPuns QuasiQuotes RecordWildCards
  main-is: Main.hs

executable filtersum
  import: language
  main-is: FilterSum.hs
